--- a/less/index.less
+++ b/less/index.less
@@ -31,7 +31,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
-	background-color: red;
+
 }
 ol, ul {
 	list-style: none;
@@ -58,3 +58,51 @@ html, body {
     height: 100%;
 }
 
+
+
+/* Main Content */
+
+.sections {
+	width: 70%;
+	font-size: 2rem;
+	padding-left: 5%;
+	margin: 0 auto;
+	height: 100%;
+
+	// position: relative;
+}
+
+.container {
+	height: 100%;
+	nav {
+		display: flex;
+		justify-content: center;
+		flex-flow: column wrap;
+		// white-space: nowrap;
+		// width: 25%;
+		vertical-align: top;
+		height: 100%;
+		width: 20%;
+		overflow: auto;
+		font-size: 2rem;
+		padding-left: 5%;
+		position: fixed;
+		background: #5E42A6;
+		
+		a {
+			text-decoration: none;
+			padding-top: 20px;
+			width: 100%;
+			color: white;
+			&:hover {
+				color: black;
+			}
+		}
+	}
+	.features {
+		.sections();
+	}
+	.about-us {
+		.sections();
+	}
+}
