added smooth scrolling and padding to sections on mobile view

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -2,6 +2,9 @@
 	width: 70%;
     // padding-left: 5%;
     padding-top: 5%;
+    @media @mobile {
+        padding-top: 15%;
+    }
 	margin: 0 auto;
     height: 100%;
     color: @PaleAqua;
