--- a/css/index.css
+++ b/css/index.css
@@ -141,6 +141,11 @@ body {
   height: 100%;
   color: #B8D0EB;
 }
+@media (max-width: 500px) {
+  .sections {
+    padding-top: 15%;
+  }
+}
 .sectionH2 {
   font-size: 2rem;
   padding-bottom: 2rem;
@@ -197,6 +202,9 @@ nav a:hover {
     border: none;
   }
 }
+html {
+  scroll-behavior: smooth;
+}
 body {
   background: #2D3142;
 }
@@ -211,6 +219,11 @@ body .container #home {
   color: #B8D0EB;
   background: #2D3142;
   text-align: center;
+}
+@media (max-width: 500px) {
+  body .container #home {
+    padding-top: 15%;
+  }
 }
 @media (max-width: 500px) {
   body .container #home {
@@ -233,6 +246,11 @@ body .container #features {
   background: #2D3142;
   text-align: center;
 }
+@media (max-width: 500px) {
+  body .container #features {
+    padding-top: 15%;
+  }
+}
 body .container #features h2 {
   font-size: 2rem;
   padding-bottom: 2rem;
@@ -248,6 +266,11 @@ body .container #about-us {
   color: #B8D0EB;
   background: #2D3142;
   text-align: center;
+}
+@media (max-width: 500px) {
+  body .container #about-us {
+    padding-top: 15%;
+  }
 }
 body .container #about-us h2 {
   font-size: 2rem;
