--- a/less/navbar.less
+++ b/less/navbar.less
@@ -11,7 +11,7 @@ nav {
     font-size: 2rem;
     padding-left: 5%;
     position: fixed;
-    background: @PlumpPurple;
+    background: linear-gradient(#5E42A6, rgb(136, 113, 194));
     @media @mobile {
         align-items: flex-start;
         justify-content: flex-start;
@@ -38,6 +38,7 @@ nav {
             color: @Gunmetal;
             padding-left: 25px;
             border-left: 4px solid @PaleAqua;
+            transition: 0.5s all linear;
             @media @mobile {
                 padding-left: 0px;
                 border: none;
