--- a/less/mixins.less
+++ b/less/mixins.less
@@ -3,11 +3,15 @@
     // padding-left: 5%;
     padding-top: 5%;
     @media @mobile {
-        padding-top: 15%;
+        padding-top: 20%;
+        margin: 0 auto;
+        // margin-left: 0;
     }
-	margin: 0 auto;
+    // margin: 0 auto;
+    margin-left: 25%;
     height: 100%;
     color: @PaleAqua;
+    text-align: center;
 }
 
 .sectionH2 {
