--- a/css/index.css
+++ b/css/index.css
@@ -269,7 +269,17 @@ html body .container #features .app-image {
   height: auto;
   margin: 0 auto;
 }
-html body .container #features ul {
+html body .container #features .feature-text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@media (max-width: 500px) {
+  html body .container #features .feature-text {
+    display: block;
+  }
+}
+html body .container #features .feature-text ul {
   font-size: 1.5rem;
   margin-top: 5%;
   line-height: 1.5;
@@ -305,12 +315,11 @@ html body .container #about-us .about-us-text {
 }
 @media (max-width: 500px) {
   html body .container #about-us .about-us-text {
-    flex-direction: column;
+    flex-flow: column nowrap;
   }
 }
 html body .container #about-us .about-us-text img {
   max-width: 100%;
-  height: auto;
   border-radius: 50%;
   padding: 10%;
 }
@@ -318,4 +327,9 @@ html body .container footer {
   text-align: center;
   background: #2D3142;
   color: white;
+}
+@media (max-width: 500px) {
+  html body .container footer {
+    margin-top: 100%;
+  }
 }
