--- a/css/index.css
+++ b/css/index.css
@@ -158,51 +158,49 @@ body {
 nav {
   display: flex;
   justify-content: center;
-  flex-flow: column wrap;
-  vertical-align: top;
+  align-items: center;
+  flex-flow: column nowrap;
   height: 100%;
   width: 20%;
+  overflow: auto;
   font-size: 2rem;
-  padding-left: 5%;
   position: fixed;
-  background: linear-gradient(#5E42A6, #8871c2);
+  background-image: linear-gradient(to top right, #5E42A6, #ae8ffd);
 }
 @media (max-width: 500px) {
   nav {
     align-items: flex-start;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     flex-flow: row nowrap;
     height: 5%;
     width: 100%;
     font-size: 1.2rem;
   }
 }
-nav h1 {
-  font-size: 2rem;
-  color: black;
-  margin-bottom: 100px;
-}
-@media (max-width: 500px) {
-  nav h1 {
-    display: none;
-  }
-}
 nav a {
   text-decoration: none;
   padding-top: 20px;
-  width: 100%;
   color: white;
 }
 nav a:hover {
   color: #2D3142;
   padding-left: 25px;
   border-left: 4px solid #B8D0EB;
-  transition: 0.5s all linear;
+  transition: 0.4s all linear;
 }
 @media (max-width: 500px) {
   nav a:hover {
     padding-left: 0px;
     border: none;
+  }
+}
+nav img {
+  width: 100%;
+  display: inline-block;
+}
+@media (max-width: 500px) {
+  nav img {
+    display: none;
   }
 }
 html {
@@ -235,12 +233,17 @@ html body .container #home {
     padding-top: 20%;
   }
 }
-html body .container #home h2 {
+html body .container #home h1 {
   font-size: 2rem;
   padding-bottom: 2rem;
 }
 html body .container #home p {
   font-size: 1.2rem;
+}
+html body .container #home img {
+  position: relative;
+  width: 80%;
+  margin-top: 3%;
 }
 html body .container #features {
   width: 70%;
@@ -260,6 +263,7 @@ html body .container #features {
 html body .container #features h2 {
   font-size: 2rem;
   padding-bottom: 2rem;
+  margin-top: 2%;
 }
 html body .container #features p {
   font-size: 1.2rem;
@@ -273,6 +277,7 @@ html body .container #features .feature-text {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-flow: column nowrap;
 }
 @media (max-width: 500px) {
   html body .container #features .feature-text {
