--- a/less/main.less
+++ b/less/main.less
@@ -4,19 +4,27 @@ html {
     body {
         background:@Gunmetal;
         .container {
-            height: 100%;
+            height: 100%; 
             #home {
                 .sections();
                 background: @Gunmetal;
+                // background-image: url('../photos/books.jpg');
+                // background-size: contain;
+                // background-repeat: no-repeat;
                 text-align: center;
                 @media @mobile {
                     padding-top: 20%;
                 }
-                h2 {
+                h1 {
                 .sectionH2();
                 }
                 p {
                 .sectionP();
+                }
+                img {
+                    position: relative;
+                    width: 80%;
+                    margin-top: 3%;
                 }
             }
             #features {
@@ -25,6 +33,7 @@ html {
                 text-align: center;
                 h2 {
                     .sectionH2();
+                    margin-top: 2%;
                 }
                 p {
                     .sectionP();
@@ -35,16 +44,16 @@ html {
                     margin: 0 auto;
                 }
                 .feature-text {
-                   display: flex;
-                   align-items: center;
-                   justify-content: center;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    flex-flow: column nowrap;
                    @media @mobile {
                        display: block;
                    }
                     ul {
                     font-size: 1.5rem;
                     margin-top: 5%;
-                    
                     line-height: 1.5;
                     text-align: left;
                     list-style-type: circle;
