--- a/less/variables.less
+++ b/less/variables.less
@@ -2,7 +2,8 @@
 @tablet: ~"(max-width: 800px)";
 
 
-@PlumpPurple: #5E42A6;
+// @PlumpPurple: #483a94;
+@Gigas: #483a94;
 @Gunmetal: #2D3142;
 @PaleAqua: #B8D0EB;
 @RedViolet: #C60F7B;
