--- a/less/main.less
+++ b/less/main.less
@@ -4,13 +4,10 @@ html {
     body {
         background:@Gunmetal;
         .container {
-            height: 100%; 
+            height: 100%;
             #home {
                 .sections();
                 background: @Gunmetal;
-                // background-image: url('../photos/books.jpg');
-                // background-size: contain;
-                // background-repeat: no-repeat;
                 text-align: center;
                 @media @mobile {
                     padding-top: 20%;
@@ -31,6 +28,7 @@ html {
                 .sections();
                 background: @Gunmetal;
                 text-align: center;
+                height: auto;
                 h2 {
                     .sectionH2();
                     margin-top: 2%;
@@ -38,26 +36,37 @@ html {
                 p {
                     .sectionP();
                 }
-                .app-image {
-                    max-width: 100%;
-                    height: auto;
-                    margin: 0 auto;
-                }
+             
                 .feature-text {
                     display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    flex-flow: column nowrap;
+                    align-items: flex-start;
+                    flex-flow: row wrap;
                    @media @mobile {
-                       display: block;
-                   }
+                       display:block;
+                   } 
+                    .app-image {
+                    width: 50%;
+                    margin-top: 5%;
+
+                        @media @mobile {
+                            margin-top: 10%;
+                            width: 100%;
+                        }
+                    }
                     ul {
                     font-size: 1.5rem;
                     margin-top: 5%;
+                    margin-left: 5%;
                     line-height: 1.5;
+                    width: 40%;
                     text-align: left;
                     list-style-type: circle;
                     list-style-position: inside;
+                    
+                    @media @mobile{
+                    text-align: left;
+                    width:90%;
+                    }
                     
                     }
                 }
@@ -66,6 +75,7 @@ html {
                 .sections();
                 background: @Gunmetal;
                 text-align: center;
+                display: inline-block;
                 h2 {
                     .sectionH2();
                 }
@@ -74,10 +84,13 @@ html {
                 }
                 .about-us-text {
                     display: flex;
-                    @media @mobile {
-                        flex-flow: column nowrap;
-                    }
                     justify-content: space-around;
+                    align-items: center;
+                    @media @mobile {
+                        display: block;
+                        
+                    }
+                    
                     img {
                         max-width: 100%;
                         border-radius: 50%;
@@ -86,11 +99,13 @@ html {
                 }
             }
             footer {
-                text-align: center;
+                text-align: right;
                 background: @Gunmetal;
                 color: white;
                 @media @mobile {
-                   margin-top: 100%;
+                   display:block;
+                   text-align: center;
+                   margin-top: 5%;
                 }
                
             }
