--- a/less/navbar.less
+++ b/less/navbar.less
@@ -1,15 +1,15 @@
-nav {
+
+    nav {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: column nowrap;
     height: 100%;
     width: 20%;
-     overflow: auto;
+    overflow: auto;
     font-size: 2rem;
-    // padding-left: 5%;
     position: fixed;
-    background-image: linear-gradient(to top right, #5E42A6, rgb(174, 143, 253));
+    background-image: linear-gradient(to top right, #483a94, rgb(142, 112, 218));
     @media @mobile {
         align-items: flex-start;
         justify-content: space-evenly;
@@ -18,14 +18,6 @@ nav {
         width: 100%;
         font-size: 1.2rem;
     }
-    // h1 {
-    //     font-size: 2rem;
-    //     color: black;
-    //     margin-bottom: 100px;
-    //     @media @mobile {
-    //         display: none;
-    //     }
-    // }
     a {
         text-decoration: none;
         padding-top: 20px;
