--- a/less/homePage.less
+++ b/less/homePage.less
@@ -43,16 +43,19 @@
                 @media @tablet {
                     width: 50%;
                     margin-top: 0rem;
+                    padding-top: 2%;
                 }
                 @media @mobile {
                     width: 90%;
                     margin-top: 0rem;
+                    padding-top: 2%;
                 }
             }
             p {
                 font-size: 1.5rem;
                 color: white;
                 text-align: center;
+                padding-bottom: 2%;
             }
         }
         .text-container {
@@ -72,7 +75,7 @@
                 font-size: 1.8rem;
                 color: @Gunmetal;
                 text-align: center;
-                margin-top: 10%;
+                // margin-top: 10%;
                 margin-bottom: 3%;
             }
             p {
