--- a/less/navbar.less
+++ b/less/navbar.less
@@ -22,7 +22,7 @@
         align-items: flex-start;
         justify-content: space-evenly;
         flex-flow: row nowrap;
-        height: 5%;
+        height: 50px;
         width: 100%;
         font-size: 1.2rem;
     }
@@ -47,7 +47,7 @@
         }
     }
     img {
-        width:100%;
+        width: 90%;
         display: inline-block;
         @media @mobile {
             display: none;
